<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="@dimen/standart_margin">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/activity_azs_rate_address"
                style="@style/text_16_black_54" />

            <LinearLayout
                android:id="@+id/activity_azs_rate_ratings_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/activity_azs_rate_et_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ru.pichesky.rosneft.extension.CustomTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="-4dp"
                    style="@style/RegTextInputLayout"
                    app:hintTextAppearance="@style/TextAppearance.AppTheme.OnBlueTextInputLayout">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/activity_azs_rate_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rate_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:textColor="@color/black_87" />

                    <requestFocus />
                </ru.pichesky.rosneft.extension.CustomTextInputLayout>

                <ru.pichesky.rosneft.extension.CustomTextInputLayout
                    android:id="@+id/text_input_L"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="-4dp"
                    style="@style/RegTextInputLayout"
                    app:hintTextAppearance="@style/TextAppearance.AppTheme.OnBlueTextInputLayout">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/activity_azs_rate_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rate_comment"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLines="3"
                        android:textColor="@color/black_87" />
                </ru.pichesky.rosneft.extension.CustomTextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/activity_azs_rate_btn_send"
                    style="@style/FlatButton"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/btn_rate_send"
                    android:textColor="@color/color_accent" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>